group_by.result, group_by.test:   Added a test case for bug #11295. item_buff.cc:   Fixed bug #11295.   This a correction for the patch of bug #11088 that takes into   account a possible NULL values of the BLOB column.